--- a/src/problem2/fancy-form/package.json
+++ b/src/problem2/fancy-form/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "typescript": "^4.4.2",
+    "vercel": "^37.2.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
